--- a/empire.html
+++ b/empire.html
@@ -11,7 +11,8 @@
     
     <div class="mainBody">
         <div class="header-nav-bar">
-            <a class="header-item" href="./index.html">About Me</a>
+            <a class="header-item" href="./index.html">Home</a>
+            <a class="header-item" href="./profile.html">About Me</a>
             <a class="header-item" href="./empire.html">The Empire</a>
             <a class="header-item" href="./careers.html">Careers</a>
             <a class="header-item" href="./donate.html">Donations</a>
