--- a/careers.html
+++ b/careers.html
@@ -11,15 +11,27 @@
     
     <div class="mainBody">
         <div class="header-nav-bar">
-            <a class="header-item" href="./index.html">About Me</a>
+            <a class="header-item" href="./index.html">Home</a>
+            <a class="header-item" href="./profile.html">About Me</a>
             <a class="header-item" href="./empire.html">The Empire</a>
             <a class="header-item" href="./careers.html">Careers</a>
             <a class="header-item" href="./donate.html">Donations</a>
         </div>
 
         <div class="body">
-            <div class="content">
-                Hello
+            <div class="content ">
+                <div class="career-card">
+                    Spacecraft Design Lead
+                </div>
+                <div class="career-card">
+                    Human Resources
+                </div>
+                <div class="career-card">
+                    Stormtroopers
+                </div>
+                <div class="career-card">
+                    TIE fighter pilots
+                </div>
             </div>
 
             <div class="career-img">
