--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <div class="introPage">
             <h2 >THE DARK SIDE</h1>
             <h1 >DARTH VADER</h1>
-            <h3 >JOIN THE EMPIRE!</h1>
+            <div class="btn">
+                <h3 >JOIN THE EMPIRE!</h1>
+            </div>
         </div>
 
     
